[package]
name = "harry_potter"
version = "0.1.0"
authors = ["ComplicatedPhenomenon <czfzdxx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
# github-rs = "0.7"
# serde_json = "1.0"
# hyper = "0.12.35"
select = "0.4.3"
#scraper = "0.11.0"
#diesel = { version = "1.0.0", features = ["postgres"] }
#dotenv = "0.9.0"
colored = "1.9.2"
mysql = "*"